fixed spacing on manual season cancel button

--- a/src/static/styles/Org.css
+++ b/src/static/styles/Org.css
@@ -8,3 +8,7 @@
 .addRemove {
     margin: 20px 0px;
 }
+
+#cancelSeasonCreateButton {
+    margin-bottom: 20px;
+}
